Stub components and implementing bulb component

--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     }
   ],
   "dependencies": {
-    "binary-clock-core": "^2.0.0"
+    "binary-clock-core": "^2.0.0",
+    "classnames": "^2.2.6",
+    "react-jss": "^10.4.0"
   }
 }
