--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     }
   ],
   "dependencies": {
+    "@use-it/interval": "^0.1.3",
     "binary-clock-core": "^2.0.0",
     "classnames": "^2.2.6",
     "react-jss": "^10.4.0"
@@ -57,6 +58,7 @@
     "@storybook/addon-essentials": "^6.0.26",
     "@storybook/addon-links": "^6.0.26",
     "@storybook/react": "^6.0.26",
-    "@types/classnames": "^2.2.10"
+    "@types/classnames": "^2.2.10",
+    "@types/react": "^16.9.52"
   }
 }
