--- a/package.json
+++ b/package.json
@@ -55,10 +55,12 @@
     "react-jss": "^10.4.0"
   },
   "devDependencies": {
+    "@size-limit/preset-small-lib": "^4.6.0",
     "@storybook/addon-essentials": "^6.0.26",
     "@storybook/addon-links": "^6.0.26",
     "@storybook/react": "^6.0.26",
     "@types/classnames": "^2.2.10",
-    "@types/react": "^16.9.52"
+    "@types/react": "^16.9.52",
+    "size-limit": "^4.6.0"
   }
 }
