--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "build-storybook": "build-storybook"
   },
   "peerDependencies": {
-    "react": ">=16"
+    "react": ">=16",
+    "react-jss": "^10.4.0"
   },
   "husky": {
     "hooks": {
@@ -51,8 +52,7 @@
   "dependencies": {
     "@use-it/interval": "^0.1.3",
     "binary-clock-core": "^2.0.0",
-    "classnames": "^2.2.6",
-    "react-jss": "^10.4.0"
+    "clsx": "^1.1.1"
   },
   "devDependencies": {
     "@size-limit/preset-small-lib": "^4.6.0",
@@ -61,6 +61,7 @@
     "@storybook/react": "^6.0.26",
     "@types/classnames": "^2.2.10",
     "@types/react": "^16.9.52",
-    "size-limit": "^4.6.0"
+    "size-limit": "^4.6.0",
+    "react-jss": "^10.4.0"
   }
 }
