--- a/package.json
+++ b/package.json
@@ -54,15 +54,20 @@
     "clsx": "^1.1.1"
   },
   "devDependencies": {
+    "@rollup/plugin-json": "^4.1.0",
     "@size-limit/preset-small-lib": "^4.6.0",
     "@storybook/addon-essentials": "^6.0.26",
     "@storybook/addon-links": "^6.0.26",
     "@storybook/react": "^6.0.26",
     "@types/classnames": "^2.2.10",
     "@types/react": "^16.9.52",
+    "autoprefixer": "^10.0.1",
     "node-sass": "^4.14.1",
+    "postcss": "^8.1.2",
+    "postcss-modules": "^3.2.2",
     "react-jss": "^10.4.0",
     "rollup-plugin-postcss": "^3.1.8",
-    "size-limit": "^4.6.0"
+    "size-limit": "^4.6.0",
+    "typescript": "^4.0.3"
   }
 }
