--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
     "@storybook/addon-essentials": "^6.0.26",
     "@storybook/addon-links": "^6.0.26",
     "@storybook/react": "^6.0.26",
+    "@types/jest": "^26.0.15",
     "@types/react": "^16.9.52",
+    "@types/react-dom": "^16.9.8",
     "postcss": "^8.1.2",
     "rollup-plugin-postcss": "^3.1.8",
     "size-limit": "^4.6.0",
